Bug 73415 - SIGSEGV in weston_view_unmap called from text_input_activate
Summary: SIGSEGV in weston_view_unmap called from text_input_activate
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-08 22:31 UTC by U. Artie Eoff
Modified: 2014-01-10 18:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston gdb backtrace (9.26 KB, text/plain)
2014-01-08 22:31 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2014-01-08 22:31:43 UTC
Created attachment 91713 [details]
weston gdb backtrace

Weston crashes when rapidly switching between different input fields on weston-editor via touch.  See attached gdb backtrace.

1. Run weston-editor
2. Rapidly touch between the "Entry" and "Numeric" fields
3. Observe segmentation fault

wayland (master) heads/master-0-gcd0dccd
drm (master) libdrm-2.4.50-0-g4c5de72
mesa (master) heads/master-0-g31ec2f8
libva (master) libva-1.2.1-0-g88ed1eb
intel-driver (master) 1.2.1-0-g8f306e3
weston (master) heads/master-0-g79a5344
efl (efl-1.8) heads/efl-1.8-0-ge99ba01
elementary (elementary-1.8) heads/elementary-1.8-0-g6959a94
wayland-fits (master) heads/master-0-gcd75d94
Comment 1 Kristian Høgsberg 2014-01-10 06:43:53 UTC
commit b0fb25dedce8ef13ad04d411b057e6f23b4e991c
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Jan 9 22:41:48 2014 -0800

    compositor: Init output listeners in weston_view if it's not on any output
    
    If we don't add the listener back to a new output, we have to init the
    list links so we can remove them unconditionally.
    
    Closes: https://bugs.freedesktop.org/show_bug.cgi?id=73415


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.